Add_Search_View_On_Action_Bar

--- a/NewsViews/app/src/main/res/values/strings.xml
+++ b/NewsViews/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="home">Home</string>
     <string name="about">About</string>
     <string name="exit">Exit</string>
-
+    <string name="search_title">Search Number ..</string>
+    <string name="search_hint"> Search Number or Date</string>
 
 </resources>
