--- a/NewsViews/app/src/main/res/values/strings.xml
+++ b/NewsViews/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="home">Home</string>
     <string name="about">About</string>
     <string name="exit">Exit</string>
-    <string name="search_title">Search Number ..</string>
-    <string name="search_hint"> Search Number or Date</string>
+    <string name="search_title">Search </string>
+    <string name="search_hint"> Search N or Date(Ex. Day/Month)</string>
 
 </resources>
