--- a/NewsViews/app/src/main/res/values/strings.xml
+++ b/NewsViews/app/src/main/res/values/strings.xml
@@ -8,4 +8,25 @@
     <string name="search_title">Search </string>
     <string name="search_hint"> Search N or Date(Ex. Day/Month)</string>
 
+    <string name="next">NEXT</string>
+    <string name="skip">SKIP</string>
+    <string name="start">GOT IT</string>
+
+    <string name="slide_1_title">Hello!</string>
+    <string name="slide_1_desc"> I am tausif, graduated from AIUB. Currently working as an IoT Engineer specially in Android Development and
+        love to play with technology
+        </string>
+
+    <string name="slide_2_title">Movie Tickets</string>
+    <string name="slide_2_desc">Get latest news all over the world and find interesting number facts </string>
+
+    <string name="slide_3_title">Great Discounts</string>
+    <string name="slide_3_desc">Thanks to Rokomari.com to give me the opportunity to develop the such kinds of Mobile App</string>
+
+    <string name="slide_4_title">World Travel</string>
+    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
+
+    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
+    <string name="play_again">Play Again</string>
+
 </resources>
