--- a/NewsViews/app/src/main/res/values/strings.xml
+++ b/NewsViews/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="about">About</string>
     <string name="exit">Exit</string>
     <string name="search_title">Search </string>
-    <string name="search_hint"> Search N or Date(Ex. Day/Month)</string>
+    <string name="search_hint"> Search Num/Date(Month/Day)</string>
 
     <string name="google_sign_in">Sign in with Google</string>
 
